// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> renders label properly 1`] = `
.c0 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: bold;
}

.c0:hover,
.c0:focus {
  outline: none;
}

.c1 {
  padding: 2px 10px;
  margin: 0px 10px 0 0;
  color: #ffffff;
  border-radius: 5px;
}

<body>
  <div>
    <h2
      class="c0"
      data-testid="article-header-title"
    >
      <span
        class="c1"
        data-testid="article-header-label"
      >
        News
      </span>
      Hello World
    </h2>
  </div>
</body>
`;

exports[`<Title /> renders properly 1`] = `
.c0 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: bold;
}

.c0:hover,
.c0:focus {
  outline: none;
}

<body>
  <div>
    <h2
      class="c0"
      data-testid="article-header-title"
    >
      Hello World
    </h2>
  </div>
</body>
`;
